cambios de estilo en contador

--- a/src/app/hola1/hola1.component.html
+++ b/src/app/hola1/hola1.component.html
@@ -1,4 +1,5 @@
 <p>hola desde Angular soy {{nombre}} v2</p>
-<p>{{contador}}</p>
+<p style="text-align: center;">{{contador}}</p>
+
 <input type="button" value="+" (click)="incrementar()" />
 <input type="button" value="-" (click)="decrementar()" />
