metodo delete en servicio rest

--- a/src/app/hola8/hola8.component.html
+++ b/src/app/hola8/hola8.component.html
@@ -18,6 +18,9 @@
         <td>
             {{libro.autor}}
         </td>
+        <td>
+            <input type="button" value="Borrar" (click)="borrarLibro(libro)" />
+        </td>
     </tr>
 </table>
 <hr style="border: 1px solid black;" />
