--- a/src/app/lista-libros/lista-libros.component.css
+++ b/src/app/lista-libros/lista-libros.component.css
@@ -14,3 +14,11 @@ td {
     border-collapse: collapse;
     text-align: center;
 }
+
+input {
+    margin: 5px;
+}
+
+table input {
+    margin: 0;
+}
